@@ -3,7 +3,7 @@
  * results, in the original order.
  */
 function map(ftn, lst) {
-    var res = list();
+    var res = [];
     for (var element; lst) {
         var cal = ftn(element);
         res.append(cal);
@@ -17,10 +17,9 @@ function map(ftn, lst) {
  * Only elements make <ftn> returns <true> will be in the retuning list.
  */
 function filter(ftn, lst) {
-    var res = list();
+    var res = [];
     for (var element; lst) {
-        var bool = ftn(element);
-        if (bool) {
+        if (ftn(element)) {
             res.append(element);
         }
     }
