@@ -280,9 +280,10 @@ class String(NativeType, Iterable):
 
 
 class List(NativeType, Iterable):
-    def __init__(self, *initial):
+    def __init__(self, *initial, mutable=True):
         NativeType.__init__(self)
 
+        self.mutable = mutable
         self.list = [*initial]
 
     def __iter__(self):
@@ -301,7 +302,10 @@ class List(NativeType, Iterable):
         self.list[key] = value
 
     def set(self, key, value):
-        self.__setitem__(key, value)
+        if self.mutable:
+            self.__setitem__(key, value)
+        else:
+            raise IllegalOperationException("Mutating an immutable list")
 
     def get(self, key):
         self.__getitem__(key)
@@ -311,38 +315,59 @@ class List(NativeType, Iterable):
         return "List"
 
     def append(self, value):
-        self.list.append(value)
+        if self.mutable:
+            self.list.append(value)
+        else:
+            raise IllegalOperationException("Mutating an immutable list")
 
     def contains(self, item):
         return item in self.list
 
     def insert(self, index, item):
-        self.list.insert(index, item)
+        if self.mutable:
+            self.list.insert(index, item)
+        else:
+            raise IllegalOperationException("Mutating an immutable list")
 
     def pop(self, index=-1):
-        return self.list.pop(index)
+        if self.mutable:
+            return self.list.pop(index)
+        else:
+            raise IllegalOperationException("Mutating an immutable list")
 
     def clear(self):
-        return self.list.clear()
+        if self.mutable:
+            return self.list.clear()
+        else:
+            raise IllegalOperationException("Mutating an immutable list")
 
     def extend(self, lst):
-        self.list.extend(lst)
+        if self.mutable:
+            return self.list.extend(lst)
+        else:
+            raise IllegalOperationException("Mutating an immutable list")
 
     def size(self):
         return len(self.list)
 
     def sort(self):
-        self.list.sort()
+        if self.mutable:
+            return self.list.sort()
+        else:
+            raise IllegalOperationException("Mutating an immutable list")
 
     def sublist(self, from_, to=None):
-        length = self.length()
+        length = self.size()
         end = length if to is None else to
         if from_ < 0 or end > length:
             raise IndexOutOfRangeException("Sublist index out of range")
         return List(self.list[from_: end])
 
     def reverse(self):
-        self.list.reverse()
+        if self.mutable:
+            return self.list.reverse()
+        else:
+            raise IllegalOperationException("Mutating an immutable list")
 
 
 class Pair(NativeType, Iterable):
@@ -628,6 +653,11 @@ class AbstractMethodException(SplException):
 
 
 class UnauthorizedException(SplException):
+    def __init__(self, msg=""):
+        SplException.__init__(self, msg)
+
+
+class IllegalOperationException(SplException):
     def __init__(self, msg=""):
         SplException.__init__(self, msg)
 
