@@ -1,3 +1,12 @@
+********** SPL 1.6 Alpha 4 **********
+===== Build 0073 2019/04/23 =====
+
+* Added new runtime check:
+    * Heap object assignment duplicate check
+    * Immutable list for *args
+* Bug fixes:
+    * Fixed that *args and **kwargs not working properly
+
 ********** SPL 1.6 Alpha 3 **********
 ===== Build 0072 2019/04/20 =====
 
